# GoogleMapsCollector

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  collect.py  collect_v2.py  enrich_reviews_only.py  mkdocs.yml  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: docs.yml
docs/: cli-reference.md  configuration.md  error-handling.md  examples.md  index.md  installation.md  known-limitations.md  output-format.md  prerequisites.md  python-api.md  quick-start.md  rate-limiting.md  resuming-collections.md  subdivision-mode.md  troubleshooting.md
gmaps_extractor/: __init__.py  __main__.py  _config_defaults.py  cli.py  cli_enrich.py  cli_v2.py  config.example.py  config_manager.py  exceptions.py  extractor.py  server.py
gmaps_extractor/decoder/: __init__.py  curl.py  pb.py  request.py
gmaps_extractor/extraction/: __init__.py  collector.py  collector_v2.py  enrichment.py  search.py
gmaps_extractor/geo/: __init__.py  grid.py  nominatim.py
gmaps_extractor/parsers/: __init__.py  business.py  place.py  reviews.py
pb_decoder/: __init__.py  api.py  app.py  curl_parser.py  main_decoder.py  pb_decoder.py  requirements.txt  start_backend.bat  start_backend.py
pb_decoder/frontend/: index.html  package.json  start.bat  vite.config.js
pb_decoder/frontend/src/: App.jsx  index.css
